fixed alignment

--- a/public/css/calendar.css
+++ b/public/css/calendar.css
@@ -386,6 +386,13 @@
     margin-bottom: 20px; /* Adds spacing so it doesn’t interfere with the footer */
 }
 
+.anonymous-reservation{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: baseline;
+    gap:10px;
+}
 
 .reserve-time-container {
     background: white;
